@@ -1,5 +1,7 @@
 package com.tyron.completion.java.rewrite;
 
+import com.github.javaparser.ast.NodeList;
+import com.github.javaparser.ast.type.ClassOrInterfaceType;
 import com.github.javaparser.ast.type.Type;
 import com.google.common.collect.ImmutableMap;
 
@@ -28,6 +30,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.TreeMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -58,7 +61,12 @@ public class IntroduceLocalVariable implements Rewrite {
                 Range range = new Range(position, position);
                 Type variableType = EditHelper.printType(type, true);
                 if (variableType.isTypeParameter()) {
-                    variableType = variableType.asTypeParameter().getTypeBound().get(0);
+                    NodeList<ClassOrInterfaceType> typeBound =
+                            variableType.asTypeParameter().getTypeBound();
+                    Optional<ClassOrInterfaceType> first = typeBound.getFirst();
+                    if (first.isPresent()) {
+                        variableType = first.get();
+                    }
                 }
                 String variableName = ActionUtil.guessNameFromMethodName(methodName);
                 if (variableName == null) {
